--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "postinstall": "ngcc"
+    "postinstall": "ngcc",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -30,11 +31,15 @@
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
+    "jasmine-marbles": "~0.8.3",
+    "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~10.1.0",
     "typescript": "~4.4.3"
   }
 }
