--- a/package.json
+++ b/package.json
@@ -1,16 +1,4 @@
 {
-  "name": "angular-tour-of-heroes",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve --port 4301 --open",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "postinstall": "ngcc",
-    "e2e": "ng e2e"
-  },
-  "private": true,
   "dependencies": {
     "@angular/animations": "~13.0.0",
     "@angular/common": "~13.0.0",
@@ -20,10 +8,12 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "angular-in-memory-web-api": "^0.11.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
+  "description": "Example project from an angular.io guide.",
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.2",
     "@angular/cli": "~13.0.2",
@@ -41,5 +31,18 @@
     "protractor": "~7.0.0",
     "ts-node": "~10.1.0",
     "typescript": "~4.4.3"
-  }
+  },
+  "license": "MIT",
+  "name": "angular-tour-of-heroes",
+  "private": true,
+  "scripts": {
+    "build": "ng build",
+    "e2e": "ng e2e",
+    "ng": "ng",
+    "postinstall": "ngcc",
+    "start": "ng serve --port 4301 --open",
+    "test": "ng test",
+    "watch": "ng build --watch --configuration development"
+  },
+  "version": "0.0.0"
 }
