--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# My ignores
+**/_*
+**/_*.*
+
 # Compiled output
 /dist
 /tmp
@@ -22,10 +26,10 @@ yarn-error.log
 
 # Visual Studio Code
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# !.vscode/settings.json
+# !.vscode/tasks.json
+# !.vscode/launch.json
+# !.vscode/extensions.json
 .history/*
 
 # Miscellaneous
@@ -40,3 +44,4 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+_Work/_Progress_TOH_tutorial.txt
